#              Copyright Catch2 Authors
# Distributed under the Boost Software License, Version 1.0.
#   (See accompanying file LICENSE_1_0.txt or copy at
#        https://www.boost.org/LICENSE_1_0.txt)

# SPDX-License-Identifier: BSL-1.0

project(
  'catch2',
  'cpp',
  version : '3.1.0',
  license: 'Boost 1.0')
pkg = import('pkgconfig')
cpp = meson.get_compiler('cpp')

subdir('src/catch2')
subdir('tests')
