#              Copyright Catch2 Authors
# Distributed under the Boost Software License, Version 1.0.
#   (See accompanying file LICENSE_1_0.txt or copy at
#        https://www.boost.org/LICENSE_1_0.txt)

# SPDX-License-Identifier: BSL-1.0

project(
  'catch2',
  'cpp',
  version: '3.1.0', # CML version placeholder, don't delete
  license: 'BSL-1.0',
  meson_version: '>=0.49.0',
)

subdir('src/catch2')
subdir('tests')
